code/menhir/ccss-1.2/src/_build/parser.automaton
State 0:
stylesheet' -> . stylesheet [ # ]
-- On S shift to state 1
-- On stylesheet shift to state 3
-- On list(S) shift to state 4
-- On VAR reduce production list(S) -> 
-- On SEL_FUNC reduce production list(S) -> 
-- On PERIOD reduce production list(S) -> 
-- On PAGE reduce production list(S) -> 
-- On OPEN_SQUARE reduce production list(S) -> 
-- On MEDIA reduce production list(S) -> 
-- On IMPORT reduce production list(S) -> 
-- On IDENT reduce production list(S) -> 
-- On HASH reduce production list(S) -> 
-- On FONTFACE reduce production list(S) -> 
-- On EOF reduce production list(S) -> 
-- On DOUBLE_COLON reduce production list(S) -> 
-- On COLON reduce production list(S) -> 
-- On CHARSET reduce production list(S) -> 
-- On ASTERISK reduce production list(S) -> 

State 1:
list(S) -> S . list(S) [ VAR SEL_FUNC PERIOD PAGE OPEN_SQUARE MEDIA IMPORT IDENT HASH FONTFACE EOF DOUBLE_COLON COLON CHARSET ASTERISK ]
-- On S shift to state 1
-- On list(S) shift to state 2
-- On VAR reduce production list(S) -> 
-- On SEL_FUNC reduce production list(S) -> 
-- On PERIOD reduce production list(S) -> 
-- On PAGE reduce production list(S) -> 
-- On OPEN_SQUARE reduce production list(S) -> 
-- On MEDIA reduce production list(S) -> 
-- On IMPORT reduce production list(S) -> 
-- On IDENT reduce production list(S) -> 
-- On HASH reduce production list(S) -> 
-- On FONTFACE reduce production list(S) -> 
-- On EOF reduce production list(S) -> 
-- On DOUBLE_COLON reduce production list(S) -> 
-- On COLON reduce production list(S) -> 
-- On CHARSET reduce production list(S) -> 
-- On ASTERISK reduce production list(S) -> 

State 2:
list(S) -> S list(S) . [ VAR SEL_FUNC PERIOD PAGE OPEN_SQUARE MEDIA IMPORT IDENT HASH FONTFACE EOF DOUBLE_COLON COLON CHARSET ASTERISK ]
-- On VAR reduce production list(S) -> S list(S) 
-- On SEL_FUNC reduce production list(S) -> S list(S) 
-- On PERIOD reduce production list(S) -> S list(S) 
-- On PAGE reduce production list(S) -> S list(S) 
-- On OPEN_SQUARE reduce production list(S) -> S list(S) 
-- On MEDIA reduce production list(S) -> S list(S) 
-- On IMPORT reduce production list(S) -> S list(S) 
-- On IDENT reduce production list(S) -> S list(S) 
-- On HASH reduce production list(S) -> S list(S) 
-- On FONTFACE reduce production list(S) -> S list(S) 
-- On EOF reduce production list(S) -> S list(S) 
-- On DOUBLE_COLON reduce production list(S) -> S list(S) 
-- On COLON reduce production list(S) -> S list(S) 
-- On CHARSET reduce production list(S) -> S list(S) 
-- On ASTERISK reduce production list(S) -> S list(S) 

State 3:
stylesheet' -> stylesheet . [ # ]
-- On # accept stylesheet

State 4:
stylesheet -> list(S) . option(charset) list(statement) EOF [ # ]
-- On CHARSET shift to state 5
-- On option(charset) shift to state 8
-- On charset shift to state 148
-- On VAR reduce production option(charset) -> 
-- On SEL_FUNC reduce production option(charset) -> 
-- On PERIOD reduce production option(charset) -> 
-- On PAGE reduce production option(charset) -> 
-- On OPEN_SQUARE reduce production option(charset) -> 
-- On MEDIA reduce production option(charset) -> 
-- On IMPORT reduce production option(charset) -> 
-- On IDENT reduce production option(charset) -> 
-- On HASH reduce production option(charset) -> 
-- On FONTFACE reduce production option(charset) -> 
-- On EOF reduce production option(charset) -> 
-- On DOUBLE_COLON reduce production option(charset) -> 
-- On COLON reduce production option(charset) -> 
-- On ASTERISK reduce production option(charset) -> 

State 5:
charset -> CHARSET . STRING SEMICOLON [ VAR SEL_FUNC PERIOD PAGE OPEN_SQUARE MEDIA IMPORT IDENT HASH FONTFACE EOF DOUBLE_COLON COLON ASTERISK ]
-- On STRING shift to state 6

State 6:
charset -> CHARSET STRING . SEMICOLON [ VAR SEL_FUNC PERIOD PAGE OPEN_SQUARE MEDIA IMPORT IDENT HASH FONTFACE EOF DOUBLE_COLON COLON ASTERISK ]
-- On SEMICOLON shift to state 7

State 7:
charset -> CHARSET STRING SEMICOLON . [ VAR SEL_FUNC PERIOD PAGE OPEN_SQUARE MEDIA IMPORT IDENT HASH FONTFACE EOF DOUBLE_COLON COLON ASTERISK ]
-- On VAR reduce production charset -> CHARSET STRING SEMICOLON 
-- On SEL_FUNC reduce production charset -> CHARSET STRING SEMICOLON 
-- On PERIOD reduce production charset -> CHARSET STRING SEMICOLON 
-- On PAGE reduce production charset -> CHARSET STRING SEMICOLON 
-- On OPEN_SQUARE reduce production charset -> CHARSET STRING SEMICOLON 
-- On MEDIA reduce production charset -> CHARSET STRING SEMICOLON 
-- On IMPORT reduce production charset -> CHARSET STRING SEMICOLON 
-- On IDENT reduce production charset -> CHARSET STRING SEMICOLON 
-- On HASH reduce production charset -> CHARSET STRING SEMICOLON 
-- On FONTFACE reduce production charset -> CHARSET STRING SEMICOLON 
-- On EOF reduce production charset -> CHARSET STRING SEMICOLON 
-- On DOUBLE_COLON reduce production charset -> CHARSET STRING SEMICOLON 
-- On COLON reduce production charset -> CHARSET STRING SEMICOLON 
-- On ASTERISK reduce production charset -> CHARSET STRING SEMICOLON 

State 8:
stylesheet -> list(S) option(charset) . list(statement) EOF [ # ]
-- On VAR shift to state 9
-- On SEL_FUNC shift to state 46
-- On PERIOD shift to state 47
-- On PAGE shift to state 79
-- On OPEN_SQUARE shift to state 49
-- On MEDIA shift to state 96
-- On IMPORT shift to state 131
-- On IDENT shift to state 104
-- On HASH shift to state 69
-- On FONTFACE shift to state 141
-- On DOUBLE_COLON shift to state 70
-- On COLON shift to state 72
-- On ASTERISK shift to state 105
-- On statement shift to state 143
-- On simple_selector shift to state 106
-- On separated_nonempty_list(COMMA,selector) shift to state 121
-- On selector_list shift to state 122
-- On selector shift to state 124
-- On rule shift to state 144
-- On qualifier shift to state 74
-- On nonempty_list(qualifier) shift to state 114
-- On list(statement) shift to state 146
-- On element shift to state 115
-- On EOF reduce production list(statement) -> 

State 9:
statement -> VAR . COLON expr SEMICOLON [ VAR SEL_FUNC PERIOD PAGE OPEN_SQUARE MEDIA IMPORT IDENT HASH FONTFACE EOF DOUBLE_COLON COLON ASTERISK ]
-- On COLON shift to state 10

State 10:
statement -> VAR COLON . expr SEMICOLON [ VAR SEL_FUNC PERIOD PAGE OPEN_SQUARE MEDIA IMPORT IDENT HASH FONTFACE EOF DOUBLE_COLON COLON ASTERISK ]
-- On VAR shift to state 11
-- On URI shift to state 12
-- On TERM_FUNC shift to state 15
-- On STRING shift to state 16
-- On SLASH shift to state 17
-- On QUANTITY shift to state 18
-- On OPEN_ROUND shift to state 19
-- On IDENT shift to state 30
-- On HASH shift to state 31
-- On term shift to state 32
-- On separated_nonempty_list(option(S),term) shift to state 37
-- On separated_nonempty_list(COMMA,sentence) shift to state 38
-- On sentence shift to state 39
-- On expr shift to state 44
-- On calc shift to state 36

State 11:
calc -> VAR . [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
-- On VAR reduce production calc -> VAR 
-- On URI reduce production calc -> VAR 
-- On TERM_FUNC reduce production calc -> VAR 
-- On STRING reduce production calc -> VAR 
-- On SLASH reduce production calc -> VAR 
-- On SEMICOLON reduce production calc -> VAR 
-- On S reduce production calc -> VAR 
-- On QUOTIENT reduce production calc -> VAR 
-- On QUANTITY reduce production calc -> VAR 
-- On PLUS reduce production calc -> VAR 
-- On OPEN_ROUND reduce production calc -> VAR 
-- On MINUS reduce production calc -> VAR 
-- On IMPORTANT reduce production calc -> VAR 
-- On IDENT reduce production calc -> VAR 
-- On HASH reduce production calc -> VAR 
-- On COMMA reduce production calc -> VAR 
-- On CLOSE_ROUND reduce production calc -> VAR 
-- On ASTERISK reduce production calc -> VAR 

State 12:
term -> URI . STRING CLOSE_ROUND [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUANTITY OPEN_ROUND IMPORTANT IDENT HASH COMMA CLOSE_ROUND ]
-- On STRING shift to state 13

State 13:
term -> URI STRING . CLOSE_ROUND [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUANTITY OPEN_ROUND IMPORTANT IDENT HASH COMMA CLOSE_ROUND ]
-- On CLOSE_ROUND shift to state 14

State 14:
term -> URI STRING CLOSE_ROUND . [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUANTITY OPEN_ROUND IMPORTANT IDENT HASH COMMA CLOSE_ROUND ]
-- On VAR reduce production term -> URI STRING CLOSE_ROUND 
-- On URI reduce production term -> URI STRING CLOSE_ROUND 
-- On TERM_FUNC reduce production term -> URI STRING CLOSE_ROUND 
-- On STRING reduce production term -> URI STRING CLOSE_ROUND 
-- On SLASH reduce production term -> URI STRING CLOSE_ROUND 
-- On SEMICOLON reduce production term -> URI STRING CLOSE_ROUND 
-- On S reduce production term -> URI STRING CLOSE_ROUND 
-- On QUANTITY reduce production term -> URI STRING CLOSE_ROUND 
-- On OPEN_ROUND reduce production term -> URI STRING CLOSE_ROUND 
-- On IMPORTANT reduce production term -> URI STRING CLOSE_ROUND 
-- On IDENT reduce production term -> URI STRING CLOSE_ROUND 
-- On HASH reduce production term -> URI STRING CLOSE_ROUND 
-- On COMMA reduce production term -> URI STRING CLOSE_ROUND 
-- On CLOSE_ROUND reduce production term -> URI STRING CLOSE_ROUND 

State 15:
term -> TERM_FUNC . expr CLOSE_ROUND [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUANTITY OPEN_ROUND IMPORTANT IDENT HASH COMMA CLOSE_ROUND ]
-- On VAR shift to state 11
-- On URI shift to state 12
-- On TERM_FUNC shift to state 15
-- On STRING shift to state 16
-- On SLASH shift to state 17
-- On QUANTITY shift to state 18
-- On OPEN_ROUND shift to state 19
-- On IDENT shift to state 30
-- On HASH shift to state 31
-- On term shift to state 32
-- On separated_nonempty_list(option(S),term) shift to state 37
-- On separated_nonempty_list(COMMA,sentence) shift to state 38
-- On sentence shift to state 39
-- On expr shift to state 42
-- On calc shift to state 36

State 16:
term -> STRING . [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUANTITY OPEN_ROUND IMPORTANT IDENT HASH COMMA CLOSE_ROUND ]
-- On VAR reduce production term -> STRING 
-- On URI reduce production term -> STRING 
-- On TERM_FUNC reduce production term -> STRING 
-- On STRING reduce production term -> STRING 
-- On SLASH reduce production term -> STRING 
-- On SEMICOLON reduce production term -> STRING 
-- On S reduce production term -> STRING 
-- On QUANTITY reduce production term -> STRING 
-- On OPEN_ROUND reduce production term -> STRING 
-- On IMPORTANT reduce production term -> STRING 
-- On IDENT reduce production term -> STRING 
-- On HASH reduce production term -> STRING 
-- On COMMA reduce production term -> STRING 
-- On CLOSE_ROUND reduce production term -> STRING 

State 17:
term -> SLASH . [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUANTITY OPEN_ROUND IMPORTANT IDENT HASH COMMA CLOSE_ROUND ]
-- On VAR reduce production term -> SLASH 
-- On URI reduce production term -> SLASH 
-- On TERM_FUNC reduce production term -> SLASH 
-- On STRING reduce production term -> SLASH 
-- On SLASH reduce production term -> SLASH 
-- On SEMICOLON reduce production term -> SLASH 
-- On S reduce production term -> SLASH 
-- On QUANTITY reduce production term -> SLASH 
-- On OPEN_ROUND reduce production term -> SLASH 
-- On IMPORTANT reduce production term -> SLASH 
-- On IDENT reduce production term -> SLASH 
-- On HASH reduce production term -> SLASH 
-- On COMMA reduce production term -> SLASH 
-- On CLOSE_ROUND reduce production term -> SLASH 

State 18:
calc -> QUANTITY . [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
-- On VAR reduce production calc -> QUANTITY 
-- On URI reduce production calc -> QUANTITY 
-- On TERM_FUNC reduce production calc -> QUANTITY 
-- On STRING reduce production calc -> QUANTITY 
-- On SLASH reduce production calc -> QUANTITY 
-- On SEMICOLON reduce production calc -> QUANTITY 
-- On S reduce production calc -> QUANTITY 
-- On QUOTIENT reduce production calc -> QUANTITY 
-- On QUANTITY reduce production calc -> QUANTITY 
-- On PLUS reduce production calc -> QUANTITY 
-- On OPEN_ROUND reduce production calc -> QUANTITY 
-- On MINUS reduce production calc -> QUANTITY 
-- On IMPORTANT reduce production calc -> QUANTITY 
-- On IDENT reduce production calc -> QUANTITY 
-- On HASH reduce production calc -> QUANTITY 
-- On COMMA reduce production calc -> QUANTITY 
-- On CLOSE_ROUND reduce production calc -> QUANTITY 
-- On ASTERISK reduce production calc -> QUANTITY 

State 19:
calc -> OPEN_ROUND . calc CLOSE_ROUND [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
-- On VAR shift to state 11
-- On QUANTITY shift to state 18
-- On OPEN_ROUND shift to state 19
-- On calc shift to state 20

State 20:
calc -> calc . ASTERISK calc [ QUOTIENT PLUS MINUS CLOSE_ROUND ASTERISK ]
calc -> calc . QUOTIENT calc [ QUOTIENT PLUS MINUS CLOSE_ROUND ASTERISK ]
calc -> calc . PLUS calc [ QUOTIENT PLUS MINUS CLOSE_ROUND ASTERISK ]
calc -> calc . MINUS calc [ QUOTIENT PLUS MINUS CLOSE_ROUND ASTERISK ]
calc -> OPEN_ROUND calc . CLOSE_ROUND [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
-- On QUOTIENT shift to state 21
-- On PLUS shift to state 23
-- On MINUS shift to state 27
-- On CLOSE_ROUND shift to state 29
-- On ASTERISK shift to state 25

State 21:
calc -> calc QUOTIENT . calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
-- On VAR shift to state 11
-- On QUANTITY shift to state 18
-- On OPEN_ROUND shift to state 19
-- On calc shift to state 22

State 22:
calc -> calc . ASTERISK calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
calc -> calc . QUOTIENT calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
calc -> calc QUOTIENT calc . [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
calc -> calc . PLUS calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
calc -> calc . MINUS calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
-- On VAR reduce production calc -> calc QUOTIENT calc 
-- On URI reduce production calc -> calc QUOTIENT calc 
-- On TERM_FUNC reduce production calc -> calc QUOTIENT calc 
-- On STRING reduce production calc -> calc QUOTIENT calc 
-- On SLASH reduce production calc -> calc QUOTIENT calc 
-- On SEMICOLON reduce production calc -> calc QUOTIENT calc 
-- On S reduce production calc -> calc QUOTIENT calc 
-- On QUOTIENT reduce production calc -> calc QUOTIENT calc 
-- On QUANTITY reduce production calc -> calc QUOTIENT calc 
-- On PLUS reduce production calc -> calc QUOTIENT calc 
-- On OPEN_ROUND reduce production calc -> calc QUOTIENT calc 
-- On MINUS reduce production calc -> calc QUOTIENT calc 
-- On IMPORTANT reduce production calc -> calc QUOTIENT calc 
-- On IDENT reduce production calc -> calc QUOTIENT calc 
-- On HASH reduce production calc -> calc QUOTIENT calc 
-- On COMMA reduce production calc -> calc QUOTIENT calc 
-- On CLOSE_ROUND reduce production calc -> calc QUOTIENT calc 
-- On ASTERISK reduce production calc -> calc QUOTIENT calc 

State 23:
calc -> calc PLUS . calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
-- On VAR shift to state 11
-- On QUANTITY shift to state 18
-- On OPEN_ROUND shift to state 19
-- On calc shift to state 24

State 24:
calc -> calc . ASTERISK calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
calc -> calc . QUOTIENT calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
calc -> calc . PLUS calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
calc -> calc PLUS calc . [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
calc -> calc . MINUS calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
-- On QUOTIENT shift to state 21
-- On ASTERISK shift to state 25
-- On VAR reduce production calc -> calc PLUS calc 
-- On URI reduce production calc -> calc PLUS calc 
-- On TERM_FUNC reduce production calc -> calc PLUS calc 
-- On STRING reduce production calc -> calc PLUS calc 
-- On SLASH reduce production calc -> calc PLUS calc 
-- On SEMICOLON reduce production calc -> calc PLUS calc 
-- On S reduce production calc -> calc PLUS calc 
-- On QUANTITY reduce production calc -> calc PLUS calc 
-- On PLUS reduce production calc -> calc PLUS calc 
-- On OPEN_ROUND reduce production calc -> calc PLUS calc 
-- On MINUS reduce production calc -> calc PLUS calc 
-- On IMPORTANT reduce production calc -> calc PLUS calc 
-- On IDENT reduce production calc -> calc PLUS calc 
-- On HASH reduce production calc -> calc PLUS calc 
-- On COMMA reduce production calc -> calc PLUS calc 
-- On CLOSE_ROUND reduce production calc -> calc PLUS calc 

State 25:
calc -> calc ASTERISK . calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
-- On VAR shift to state 11
-- On QUANTITY shift to state 18
-- On OPEN_ROUND shift to state 19
-- On calc shift to state 26

State 26:
calc -> calc . ASTERISK calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
calc -> calc ASTERISK calc . [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
calc -> calc . QUOTIENT calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
calc -> calc . PLUS calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
calc -> calc . MINUS calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
-- On VAR reduce production calc -> calc ASTERISK calc 
-- On URI reduce production calc -> calc ASTERISK calc 
-- On TERM_FUNC reduce production calc -> calc ASTERISK calc 
-- On STRING reduce production calc -> calc ASTERISK calc 
-- On SLASH reduce production calc -> calc ASTERISK calc 
-- On SEMICOLON reduce production calc -> calc ASTERISK calc 
-- On S reduce production calc -> calc ASTERISK calc 
-- On QUOTIENT reduce production calc -> calc ASTERISK calc 
-- On QUANTITY reduce production calc -> calc ASTERISK calc 
-- On PLUS reduce production calc -> calc ASTERISK calc 
-- On OPEN_ROUND reduce production calc -> calc ASTERISK calc 
-- On MINUS reduce production calc -> calc ASTERISK calc 
-- On IMPORTANT reduce production calc -> calc ASTERISK calc 
-- On IDENT reduce production calc -> calc ASTERISK calc 
-- On HASH reduce production calc -> calc ASTERISK calc 
-- On COMMA reduce production calc -> calc ASTERISK calc 
-- On CLOSE_ROUND reduce production calc -> calc ASTERISK calc 
-- On ASTERISK reduce production calc -> calc ASTERISK calc 

State 27:
calc -> calc MINUS . calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
-- On VAR shift to state 11
-- On QUANTITY shift to state 18
-- On OPEN_ROUND shift to state 19
-- On calc shift to state 28

State 28:
calc -> calc . ASTERISK calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
calc -> calc . QUOTIENT calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
calc -> calc . PLUS calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
calc -> calc . MINUS calc [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
calc -> calc MINUS calc . [ VAR URI TERM_FUNC STRING SLASH SEMICOLON S QUOTIENT QUANTITY PLUS OPEN_ROUND MINUS IMPORTANT IDENT HASH COMMA CLOSE_ROUND ASTERISK ]
-- On QUOTIENT shift to state 21
-- On ASTERISK shift to state 25
-- On VAR reduce production calc -> calc MINUS calc 
-- On URI reduce production calc -> calc MINUS calc 
-- On TERM_FUNC reduce production calc -> calc MINUS calc 
-- On STRING reduce production calc -> calc MINUS calc 
-- On SLASH reduce production calc -> calc MINUS calc 
-- On SEMICOLON reduce production calc -> calc MINUS calc 
-- On S reduce production calc -> calc MINUS calc 
-- On QUANTITY reduce production calc -> calc MINUS calc 
-- On PLUS reduce production calc -> calc MINUS calc 
-- On OPEN_ROUND reduce production calc -> calc MINUS calc 
-- On MINUS reduce production calc -> calc MINUS calc 
-- On IMPORTANT reduce production calc -> calc MINUS calc 
-- On IDENT reduce production calc -> calc MINUS calc 
-- On HASH reduce production calc -> calc MINUS calc 
-- On COMMA reduce production calc -> calc MINUS calc 
-- On CLOSE_ROUND reduce production calc -> calc MINUS calc 
